Refactor evaluation logic: remove Evaluation entity, replace with CorrectionsResponse, simplify service and controller methods, and update repository dependencies. Add debugger support and refine Docker configuration.